# Star-Battle-Solver

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
Queens/: computer_vision.py  queens_solver.py  score_sharer.py  scores.csv  scores.py
Queens/Logic/: computer_vision.py  game_inputter.py  game_scraper.py  get_cookies.py  inputter.py  plot_scores.py  plotter.py  scrape_scores.py  scrape_scores_from_messages.py  scraper.py  share_score.py  share_score_after_play.py  upload_and_share_plot.py
Queens/Logic/Solvers/: create_training_data.py  linear_programming.py  naive_backtracking.py  q_learning.py  rl.py  rl2.py  rl3.py  rl3_dqn_unsupervised.py
Queens/Logic/Solvers/RL_Resources/Training_Data/: images.txt
Queens/Logic/Solvers/RL_Resources/Training_Data/Metadata/: queens1.txt  queens10.txt  queens100.txt  queens101.txt  queens102.txt  queens103.txt  queens104.txt  queens105.txt  queens106.txt  queens107.txt  queens108.txt  queens109.txt  queens11.txt  queens110.txt  queens111.txt  queens112.txt  queens113.txt  queens114.txt  queens115.txt  queens116.txt  queens117.txt  queens118.txt  queens119.txt  queens12.txt  queens120.txt  queens121.txt  queens122.txt  queens123.txt  queens124.txt  queens125.txt  queens126.txt  queens127.txt  queens128.txt  queens130.txt  queens131.txt  queens132.txt  queens133.txt  queens134.txt  queens135.txt  (+337 more)
Queens/Logic/Solvers/RL_Resources/Weights/: weights.txt
Queens/Score_Scraping/: scrape_scores.py  share_score.py
scripts/: run_queens_solver.bat  run_score_sharer.bat
