[project]
name = "star-battle-solver"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "dotenv>=0.9.9",
    "matplotlib>=3.10.8",
    "opencv-python>=4.12.0.88",
    "pandas>=2.3.3",
    "pulp>=3.3.0",
    "selenium>=4.39.0",
    "webdriver-manager>=4.0.2",
    "z3>=0.2.0",
]
